--- a/src/app/modules/menu-layout/components/meters/virtual-meter-modal/virtual-meter-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/virtual-meter-modal/virtual-meter-modal.component.html
@@ -10,8 +10,8 @@
               <div nz-row>
                 <nz-form-item>
                   <nz-form-control>
-                    <nz-select formControlName="medidorId" style="width: 150px;" [(ngModel)]="dataPosition.idMedidor" nzAllowClear [nzDisabled]="true">
-                          <nz-option [nzLabel]="dataPosition.sourceId" [nzValue]="dataPosition.idMedidor"></nz-option>
+                    <nz-select formControlName="medidorId" style="width: 150px;" [(ngModel)]="dataPosition.id" nzAllowClear [nzDisabled]="true">
+                          <nz-option [nzLabel]="dataPosition.sourceId" [nzValue]="dataPosition.id"></nz-option>
                     </nz-select>
                   </nz-form-control>
                 </nz-form-item>
