--- a/src/app/modules/menu-layout/components/rates/rates.component.html
+++ b/src/app/modules/menu-layout/components/rates/rates.component.html
@@ -1,22 +1,22 @@
 <h1>Tarifas</h1>
 <div nz-row class="row-1">
-    <div nz-col nzOffset="8" nzSpan="4" class="row1-col1">
+  
+  <div nz-col nzSpan="8">
+
+    <div *ngIf="!ratesIsActive ; else enableClients">
+      <button nz-button [nzType]="'primary'" (click)="GetRates(0, true)"><span>Medidores desabilitados</span></button>
+    </div>
+    <ng-template #enableClients>
+      <button nz-button [nzType]="'primary'" (click)="GetRates(1, true)"><span>Medidores Habilitados</span></button>
+    </ng-template>
+
+  </div>
+  <br>
+    <div nz-col nzOffset="1" nzSpan="4" class="row1-col1">
       <app-modal-new-rate (DataUpdated)="updateTable($event)"></app-modal-new-rate>
     </div>
-
-    <div nz-col nzSpan="12" class="row1-col2">
-
-        <nz-input-group [nzSuffix]="suffixIconSearch">
-          <input type="text" nz-input placeholder="input search text" />
-        </nz-input-group>
-        <ng-template #suffixIconSearch>
-          <i nz-icon nzType="search"></i>
-        </ng-template>
-        
-    </div>
-
-
 </div>
+<br>
 <div nz-row class="row-2">
   <div nz-col>
       <nz-table [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{  x: '1300px', y: '385px' }"  [nzPageSize]="10">
@@ -41,15 +41,19 @@
         <tbody>
           <tr *ngFor="let data of listOfData">
             <td nzLeft>
-              <app-modal-new-rate [dataPosition]="data"></app-modal-new-rate>
-              <button class="delete" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="delete" nzTheme="outline" (click)="DeleteRate(data.id)"></i></button>
+              <div *ngIf="data.estado; else disablesList"> 
+                  <button class="edit" nz-button nzType="primary"  nzShape="circle" (click)=" disableRate(data, 0)"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+              </div>
+              <ng-template #disablesList>
+                  <button class="edit" nz-button nzType="primary"  nzShape="circle" (click)=" disableRate(data, 1)"><i nz-icon nzType="undo" nzTheme="outline"></i></button>
+              </ng-template>
             </td>
             <td>{{data.id}}</td>
             <td>{{data.codigo}}</td>
             <td>{{ data.descripcion }}</td>
             <td>{{ data.observacion }}</td>
             <td nzRight>
-              <app-modal-parameters [dataPosition]="data"></app-modal-parameters>
+              <app-modal-parameters [dataPosition]="data" [listOfParamRelation]="listOfParamRelation"></app-modal-parameters>
             </td>
           </tr>
         </tbody>
